--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
 <body>
 <h1 id="geo-api-server">geo-api-server</h1>
 <h2 id="what-is-this">What is this?</h2>
-<p>住所正規化ツール<a href="https://github.com/geolonia/normalize-japanese-addresses">geolonia/normalize-japanese-addresses</a> および、逆ジオコーディングツールの<a href="https://github.com/geolonia/open-reverse-geocoder">geolonia/open-reverse-geocoder</a> をサーバーサイドで動かし、WebAPIとして使用できるようにしたものです。</p>
+<p>住所正規化ツール<a href="https://github.com/geolonia/normalize-japanese-addresses">geolonia/normalize-japanese-addresses</a> および、逆ジオコーディングツールの<a href="https://github.com/geolonia/open-reverse-geocoder">geolonia/open-reverse-geocoder</a> をサーバーサイドで動かし、WebAPI として使用できるようにしたものです。</p>
 <h2 id="usage">Usage</h2>
-<p>Herokuにデプロイしてみましたが、無料版なので30分アクセスがないと自動的にスリープモードに入ってしまいます。 寝ているときは何度かリクエストを送って起こしてあげてください。</p>
+<p>Heroku にデプロイしてみましたが、無料版なので 30 分アクセスがないと自動的にスリープモードに入ってしまいます。 寝ているときは何度かリクエストを送って起こしてあげてください。</p>
 <ul>
 <li>住所の正規化
 <ul>
@@ -37,6 +37,16 @@
 </ul></li>
 </ul>
 <h2 id="thanks-to">Thanks to…</h2>
-<p>本プログラムは株式会社Geolonia様の成果を活用したものです。 - GitHub - https://github.com/geolonia - Official Site - https://geolonia.com/</p>
+<p>本プログラムは株式会社 Geolonia 様の成果を活用したものです。</p>
+<ul>
+<li>GitHub
+<ul>
+<li>https://github.com/geolonia</li>
+</ul></li>
+<li>Official Site
+<ul>
+<li>https://geolonia.com/</li>
+</ul></li>
+</ul>
 </body>
 </html>
